--- a/angul/src/app/app.component.html
+++ b/angul/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>app component</h1>
-<app-card></app-card>
+<div class="cards-container">
+    <app-card></app-card>
+
+<app-card-roxo></app-card-roxo>
+</div>
