--- a/angul/src/app/card-roxo/card-roxo.component.html
+++ b/angul/src/app/card-roxo/card-roxo.component.html
@@ -1,5 +1,5 @@
 <div class="card-roxo">
     <div class="card-roxo__plan card-roxo__item">Plano <b>Super</b></div>
-    <div class="card-roxo__price card-roxo__item">R$250,00</div>
-    <div class="card-roxo__button card-roxo__item">Adquirir</div>
+    <div class="card-roxo__price card-roxo__item">R$250,00/Mês</div>
+    <app-card-roxo-button></app-card-roxo-button>
 </div>
